# JuegoODS

./: .gitignore  AGENTS.md  Modulo3.py  R2_galeria_matrices.py  README.md  ToDo.md  pyproject.toml  registrar.py
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: opencode.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
docs/: 03 TechStack.md  04 UXDesing.md  05 FrontEnd Flow.md  07 Implementation Plan.md  AppFeatures.md  ProjectGoals.md  TechStack.md
specs/001-initial-project-features/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-initial-project-features/checklists/: requirements.md
specs/001-initial-project-features/contracts/: persistence-contracts.md  ui-screen-contracts.md
src/: config.py
src/auth/: login.py  player.py  profile.py  registration.py  validator.py
src/common/: errors.py
src/core/: card.py  game.py  points.py
src/ods/: data.py  messages.py
src/persistence/: games.py  players.py
src/reports/: export.py  gantt.py  logs.py  ranking.py  summary.py
src/ui/: app.py  assets.py  messages.py  renderer.py  screens.py
tests/: test_auth.py  test_card.py  test_game.py  test_messages.py  test_persistence.py  test_reports.py
