[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "juegoods"
version = "0.1.0"
description = "Tómbola educativa de los Objetivos de Desarrollo Sostenible"
requires-python = ">=3.9"
dependencies = [
    "pygame>=2.5",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
